namespaces/live.cloud-platform.service.justice.gov.uk/ubi-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ubi-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMCTS"
    cloud-platform.justice.gov.uk/slack-channel: "dex-engage"
    cloud-platform.justice.gov.uk/application: "Find Unclaimed Money"
    cloud-platform.justice.gov.uk/owner: "dex-engage: rohan.salunkhe@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice"
    cloud-platform.justice.gov.uk/team-name: "dex-engage"
    cloud-platform.justice.gov.uk/review-after: ""
